Bug 356747 - Akonadiconsole crashes on a specific folder
Summary: Akonadiconsole crashes on a specific folder
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: akonadiconsole (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-12-15 17:41 UTC by jos poortvliet
Modified: 2016-09-15 09:39 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 16.08.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description jos poortvliet 2015-12-15 17:41:13 UTC
Today my Inbox folder suddenly became grayed out and I couldn't open it anymore. I restarted Akonadi, which didn't help. Checked out the folder with AkonadiConsole which crashed about 2 seconds in loading the folder, and keeps doing that.

After restarting KMail, shutting down Akonadi and restarting it all, I can see and enter the inbox again in KMail. Akonadiconsole keeps crashing upon entering the Inbox folder, hope the backtrace is helpful.

Note that it doesn't crash on any other folder.

It is a disconnected IMAP account using Kerio on the server.

Reproducible: Always

Steps to Reproduce:
1. open Akonadiconsole
2. open the Inbox folder
3.

Actual Results:  
Crash

Expected Results:  
no crash

Application: akonadiconsole (0.99)
KDE Platform Version: 4.14.14
Qt Version: 4.8.7
Operating System: Linux 4.3.0-2-default x86_64
Distribution: "openSUSE Tumbleweed (20151124) (x86_64)"

-- Backtrace:
Application: Akonadi Console (akonadiconsole), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f6eba4c3940 (LWP 20549))]

Thread 5 (Thread 0x7f6eb5649700 (LWP 20550)):
#0  0x00000030010e2883 in select () at /lib64/libc.so.6
#1  0x0000003011b61a2f in  () at /usr/lib64/libQtCore.so.4
#2  0x0000003011a8023c in  () at /usr/lib64/libQtCore.so.4
#3  0x00000030018074a4 in start_thread () at /lib64/libpthread.so.0
#4  0x00000030010e9b9d in clone () at /lib64/libc.so.6

Thread 4 (Thread 0x7f6eb4e48700 (LWP 20557)):
#0  0x000000300180d07f in pthread_cond_wait@@GLIBC_2.3.2 () at /lib64/libpthread.so.0
#1  0x00007f6ec23dfde6 in WTF::TCMalloc_PageHeap::scavengerThread() () at /usr/lib64/libQtWebKit.so.4
#2  0x00007f6ec23dfe19 in  () at /usr/lib64/libQtWebKit.so.4
#3  0x00000030018074a4 in start_thread () at /lib64/libpthread.so.0
#4  0x00000030010e9b9d in clone () at /lib64/libc.so.6

Thread 3 (Thread 0x7f6e742fd700 (LWP 20575)):
#0  0x000000300180d07f in pthread_cond_wait@@GLIBC_2.3.2 () at /lib64/libpthread.so.0
#1  0x00007f6ec21495e9 in JSC::BlockAllocator::blockFreeingThreadMain() () at /usr/lib64/libQtWebKit.so.4
#2  0x00007f6ec24078f6 in WTF::wtfThreadEntryPoint(void*) () at /usr/lib64/libQtWebKit.so.4
#3  0x00000030018074a4 in start_thread () at /lib64/libpthread.so.0
#4  0x00000030010e9b9d in clone () at /lib64/libc.so.6

Thread 2 (Thread 0x7f6e72b80700 (LWP 20584)):
#0  0x00000030010e120d in poll () at /lib64/libc.so.6
#1  0x00007f6ebe13d264 in  () at /usr/lib64/libglib-2.0.so.0
#2  0x00007f6ebe13d36c in g_main_context_iteration () at /usr/lib64/libglib-2.0.so.0
#3  0x0000003011bb424e in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQtCore.so.4
#4  0x0000003011b843e1 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQtCore.so.4
#5  0x0000003011b846f5 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQtCore.so.4
#6  0x0000003011a7da59 in QThread::exec() () at /usr/lib64/libQtCore.so.4
#7  0x0000003011a8023c in  () at /usr/lib64/libQtCore.so.4
#8  0x00000030018074a4 in start_thread () at /lib64/libpthread.so.0
#9  0x00000030010e9b9d in clone () at /lib64/libc.so.6

Thread 1 (Thread 0x7f6eba4c3940 (LWP 20549)):
[KCrash Handler]
#6  0x0000003035052c41 in KMime::Headers::Date::dateTime() const () at /usr/lib64/libkmime.so.4
#7  0x000000000042d51b in  ()
#8  0x00007f6ec41a6388 in  () at /usr/lib64/libQtGui.so.4
#9  0x00007f6ec41a64da in  () at /usr/lib64/libQtGui.so.4
#10 0x00007f6ec41a648f in  () at /usr/lib64/libQtGui.so.4
#11 0x00007f6ec41a648f in  () at /usr/lib64/libQtGui.so.4
#12 0x00007f6ec41a648f in  () at /usr/lib64/libQtGui.so.4
#13 0x00007f6ec41a648f in  () at /usr/lib64/libQtGui.so.4
#14 0x00007f6ec41a648f in  () at /usr/lib64/libQtGui.so.4
#15 0x00007f6ec41a6447 in  () at /usr/lib64/libQtGui.so.4
#16 0x00007f6ec41a6447 in  () at /usr/lib64/libQtGui.so.4
#17 0x00007f6ec41a6447 in  () at /usr/lib64/libQtGui.so.4
#18 0x00007f6ec41a648f in  () at /usr/lib64/libQtGui.so.4
#19 0x00007f6ec419ef14 in  () at /usr/lib64/libQtGui.so.4
#20 0x00007f6ec41a128a in  () at /usr/lib64/libQtGui.so.4
#21 0x00007f6ec41a13bf in  () at /usr/lib64/libQtGui.so.4
#22 0x0000003011b98f60 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () at /usr/lib64/libQtCore.so.4
#23 0x0000003011be6fe4 in QAbstractItemModel::rowsInserted(QModelIndex const&, int, int) () at /usr/lib64/libQtCore.so.4
#24 0x0000003011b7fa02 in QAbstractItemModel::endInsertRows() () at /usr/lib64/libQtCore.so.4
#25 0x00007f6ec419d9b5 in  () at /usr/lib64/libQtGui.so.4
#26 0x00007f6ec41a1177 in  () at /usr/lib64/libQtGui.so.4
#27 0x00007f6ec41a13bf in  () at /usr/lib64/libQtGui.so.4
#28 0x0000003011b98f60 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () at /usr/lib64/libQtCore.so.4
#29 0x0000003011be6fe4 in QAbstractItemModel::rowsInserted(QModelIndex const&, int, int) () at /usr/lib64/libQtCore.so.4
#30 0x0000003011b7fa02 in QAbstractItemModel::endInsertRows() () at /usr/lib64/libQtCore.so.4
#31 0x000000301822eb6d in  () at /usr/lib64/libkdeui.so.5
#32 0x0000003011b98f60 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () at /usr/lib64/libQtCore.so.4
#33 0x0000003011be6fe4 in QAbstractItemModel::rowsInserted(QModelIndex const&, int, int) () at /usr/lib64/libQtCore.so.4
#34 0x0000003011b7fa02 in QAbstractItemModel::endInsertRows() () at /usr/lib64/libQtCore.so.4
#35 0x000000302f329e4a in  () at /usr/lib64/libakonadi-kde.so.4
#36 0x000000302f32a745 in  () at /usr/lib64/libakonadi-kde.so.4
#37 0x0000003011b98f60 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () at /usr/lib64/libQtCore.so.4
#38 0x000000302f353fd2 in Akonadi::ItemFetchJob::itemsReceived(QList<Akonadi::Item> const&) () at /usr/lib64/libakonadi-kde.so.4
#39 0x000000302f35407b in  () at /usr/lib64/libakonadi-kde.so.4
#40 0x0000003011b98f60 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () at /usr/lib64/libQtCore.so.4
#41 0x0000003011b9e973 in QObject::event(QEvent*) () at /usr/lib64/libQtCore.so.4
#42 0x00007f6ec3c11f1c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () at /usr/lib64/libQtGui.so.4
#43 0x00007f6ec3c189ec in QApplication::notify(QObject*, QEvent*) () at /usr/lib64/libQtGui.so.4
#44 0x000000301823e65a in KApplication::notify(QObject*, QEvent*) () at /usr/lib64/libkdeui.so.5
#45 0x0000003011b85a1d in QCoreApplication::notifyInternal(QObject*, QEvent*) () at /usr/lib64/libQtCore.so.4
#46 0x0000003011bb65cf in  () at /usr/lib64/libQtCore.so.4
#47 0x0000003011bb38f1 in  () at /usr/lib64/libQtCore.so.4
#48 0x00007f6ebe13d097 in g_main_context_dispatch () at /usr/lib64/libglib-2.0.so.0
#49 0x00007f6ebe13d2c8 in  () at /usr/lib64/libglib-2.0.so.0
#50 0x00007f6ebe13d36c in g_main_context_iteration () at /usr/lib64/libglib-2.0.so.0
#51 0x0000003011bb424e in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQtCore.so.4
#52 0x00007f6ec3cb5946 in  () at /usr/lib64/libQtGui.so.4
#53 0x0000003011b843e1 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQtCore.so.4
#54 0x0000003011b846f5 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQtCore.so.4
#55 0x0000003011b89ef9 in QCoreApplication::exec() () at /usr/lib64/libQtCore.so.4
#56 0x000000000041e421 in  ()
#57 0x0000003001020610 in __libc_start_main () at /lib64/libc.so.6
#58 0x000000000041ed69 in _start ()
Comment 1 Daniel Vrátil 2016-09-15 09:39:47 UTC
Git commit 00db9bd7154d7b4785a6f4ac3da8ee6a81830754 by Daniel Vrátil.
Committed on 15/09/2016 at 09:39.
Pushed by dvratil into branch 'Applications/16.08'.

Fix Browser model crash when email is missing a header
FIXED-IN: 16.08.1

M  +15   -3    akonadiconsole/src/akonadibrowsermodel.cpp

http://commits.kde.org/kdepim/00db9bd7154d7b4785a6f4ac3da8ee6a81830754
Comment 2 Daniel Vrátil 2016-09-15 09:39:51 UTC
Git commit 218e0cb71265851e42838c646f79f64b0838f70f by Daniel Vrátil.
Committed on 15/09/2016 at 09:37.
Pushed by dvratil into branch 'master'.

Fix Browser model crash when email is missing a header
FIXED-IN: 16.08.1

M  +15   -3    src/akonadibrowsermodel.cpp

http://commits.kde.org/akonadiconsole/218e0cb71265851e42838c646f79f64b0838f70f