Fix Browser model crash when email is missing a header

BUG: 356747
FIXED-IN: 16.08.1